Add authentication logic

--- a/package.json
+++ b/package.json
@@ -16,16 +16,20 @@
   "license": "UNLICENSED",
   "description": "",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "class-validator": "^0.14.1",
     "dotenv": "^16.4.5",
-    "express": "^4.19.2",
+    "express": "^4.21.0",
+    "jsonwebtoken": "^9.0.2",
     "reflect-metadata": "^0.2.2",
     "sqlite3": "^5.1.7",
     "typeorm": "^0.3.20"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
     "@types/express": "^4.17.21",
     "@types/jest": "^29.5.12",
+    "@types/jsonwebtoken": "^9.0.7",
     "@types/node": "^22.5.1",
     "jest": "^29.7.0",
     "nodemon": "^3.1.4",
